--- a/.gitconfig
+++ b/.gitconfig
@@ -12,18 +12,23 @@
 
 [diff]
     tool = vimdiff
-    
+
+[difftool "meld"] # visual difftool
+    cmd = meld "$LOCAL" "$REMOTE"
+
 [merge]
     tool = vimdiff
 
+[mergetool "meld"] # visual mergetool
+    cmd = meld "$LOCAL" "$MERGED" "$REMOTE" --output "$MERGED"
+
 [alias]
     a = add
-    ap = add -p
 
     b = branch
     ba = branch -a
     branch-name = "!git rev-parse --abbrev-ref HEAD"
-    
+
     c = commit
     cm = commit -m
     cam = commit -am
@@ -35,6 +40,8 @@
 
     d = diff
     dc = diff --cached
+    dt = difftool
+    dtv = difftool -t meld
 
     f = fetch
 
@@ -65,3 +72,4 @@
     xcl = clean -df
     xres = reset --hard
     xreso = "!git reset --hard origin/\"$(git branch-name)\""
+
