--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,3 +5,5 @@ set -g @plugin 'christoomey/vim-tmux-navigator'                                 
                                                                                                                                                                │    }
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)                                                                              │}
 run '~/.tmux/plugins/tpm/tpm'
+
+set-option -ga terminal-overrides ",xterm-color:Tc"
