--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -3,8 +3,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'basic'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-set-option -ga terminal-overrides ",xterm-color:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
