--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
+#!/bin/bash
 #
 # DOTFILES
 #
-DF_GIT_USER_NAME
-DF_GIT_USER_EMAIL
-DF_GIT_USER_USERNAME
-DF_GIT_USER_EXCLUDES_FILE=~/.gitignore
+export DF_GIT_USER_NAME='Josh Walwyn'
+export DF_GIT_USER_EMAIL=
+export DF_GIT_USER_USERNAME=drinkataco
+export DF_GIT_USER_EXCLUDES_FILE=~/.gitignore
