--- a/system/macos/brew/Brewfile
+++ b/system/macos/brew/Brewfile
@@ -19,16 +19,18 @@ brew 'docker'
 brew 'docker-machine'
 brew 'ffmpeg'
 brew 'flac'
-brew 'openssl@1.1'
+brew 'findutils'
+brew 'gawk'
 brew 'gettext', link: true
 brew 'git'
 brew 'go'
 brew 'glide'
+brew 'gnupg'
+brew 'gnutls'
 brew 'gnu-getopt'
 brew 'gnu-indent'
 brew 'gnu-sed'
 brew 'gnu-tar'
-brew 'gnupg'
 brew 'grep'
 brew 'highlight'
 brew 'htop'
@@ -44,6 +46,7 @@ brew 'mkvtoolnix', args: ['with-qt']
 brew 'nmap'
 brew 'node'
 brew 'nodeenv'
+brew 'openssl@1.1'
 brew 'openvpn', restart_service: true
 brew 'php7'
 brew 'rbenv'
