changed gitconfig for the better

--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,6 @@
 #
 # DOTFILES
 #
-export DF_GIT_USER_NAME='Josh Walwyn'
+export DF_GIT_USER_NAME='J J Walwyn'
 export DF_GIT_USER_EMAIL=
-export DF_GIT_USER_USERNAME=drinkataco
 export DF_GIT_USER_EXCLUDES_FILE=~/.gitignore
