--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,75 +1,73 @@
-[user]
-  name = $DF_GIT_USER_NAME
-  email = $DF_GIT_USER_EMAIL
-  username = $DF_GIT_USER_USERNAME
-
-[core]
-  editor = vim
-  excludesfile = $DF_GIT_USER_EXCLUDES_FILE
-
-[web]
-  browser = google-chrome
-
-[diff]
-  tool = vimdiff
-
-[difftool "meld"] # visual difftool
-  cmd = meld "$LOCAL" "$REMOTE"
-
-[merge]
-  tool = vimdiff
-
-[mergetool "meld"] # visual mergetool
-  cmd = meld "$LOCAL" "$MERGED" "$REMOTE" --output "$MERGED"
-
 [alias]
   a = add
-
   b = branch
   ba = branch -a
   branch-name = "!git rev-parse --abbrev-ref HEAD"
-
   c = commit
   cm = commit -m
   cam = commit -am
-  cd = commit --amend
-  cad = commit -a --amend
-
   ch = checkout
-  chb = checkout -b
-
   d = diff
-  dc = diff --cached
   dt = difftool
   dtv = difftool -t meld
-
   f = fetch
-
   l = log
-
   m = merge
-  mm = merge -X ours
-  mt = merge -X theirs
-
   p = push
   po = "!git push -u origin \"$(git branch-name)\""
-
   r = reset
-
+  rb = rebase
+  rbc = rebase --continue
+  rbs = rebase --skip
+  rba = rebase --abort
   s = status
-
-  # git flow
-  fi = flow init
-  ff = flow feature
-  ffs = flow feature start
-  fff = flow feature finish
-  fhs = flow hotfix start
-  fhf = flow hotfix finish
-  frs = flow release start
-  frf = flow release finish
-
-  # destruction
   xcl = clean -df
   xres = reset --hard
   xreso = "!git reset --hard origin/\"$(git branch-name)\""
 
+[core]
+  autocrlf = input
+  editor = vim
+  excludesfile = $DF_GIT_USER_EXCLUDES_FILE
+
+# [commit]
+#  gpgsign = true
+
+[diff]
+  tool = vimdiff
+
+[difftool "s"] # visual difftool
+  cmd = smerge mergetool "$BASE" "$REMOTE" "$LOCAL" -o "$MERGED"
+
+[merge]
+  tool = vimdiff
+
+[mergetool "s"] # visual mergetool
+  cmd = smerge mergetool "$BASE" "$REMOTE" "$LOCAL" -o "$MERGED"
+
+[pull]
+  rebase = true
+
+[push]
+  default = current
+  followTags = true
+
+[remote "origin"]
+  fetch = +refs/pr/*/head:refs/remotes/origin/pr/*
+
+[user]
+  name = $DF_GIT_USER_NAME
+  email = $DF_GIT_USER_EMAIL
+# signingKey = $DF_GIT_USER_SIGNING_KEY
+
+[url "git@github.com:"]
+  insteadOf = https://github.com/
+
+[url "ssh://git@gitlab.com/"]
+  insteadOf = https://gitlab.com/
+
+[url "ssh://git@bitbucket.org/"]
+  insteadOf = https://bitbucket.org/
+
+[web]
+  browser = firefox
