--- a/system/macos/brew/Brewfile
+++ b/system/macos/brew/Brewfile
@@ -15,6 +15,7 @@ brew 'circleci'
 brew 'cmake'
 brew 'cmatrix'
 brew 'coreutils', link: true
+brew 'deno'
 brew 'docker'
 brew 'docker-machine'
 brew 'ffmpeg'
@@ -39,18 +40,16 @@ brew 'httpie'
 brew 'iperf'
 brew 'ipython'
 brew 'jq'
-brew 'kops'
 brew 'lynx'
 brew 'macvim'
 brew 'minikube', link: false
 brew 'mkvtoolnix', args: ['with-qt']
 brew 'nmap'
 brew 'node'
-brew 'nodeenv'
 brew 'nvm'
 brew 'openssl@1.1'
 brew 'openvpn', restart_service: true
-brew 'php7'
+brew 'php@7.4'
 brew 'rbenv'
 brew 'readline'
 brew 'ruby'
@@ -63,7 +62,6 @@ brew 'vegeta'
 brew 'vim'
 brew 'watch'
 brew 'watchman'
-brew 'yarn'
 brew 'zsh'
 brew 'zsh-completions'
 brew 'zsh-syntax-highlighting'
