--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -4,7 +4,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-#set -g @plugin 'jimeh/tmux-themepack' # do i need
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g set-titles on
