--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -22,6 +22,8 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+set-window-option -g mode-keys vi
+
 #
 # THEME
 #
