Add homebrew python & mono

--- a/system/macos/brew/Brewfile
+++ b/system/macos/brew/Brewfile
@@ -46,12 +46,14 @@ brew 'lynx'
 brew 'macvim'
 brew 'minikube', link: false
 brew 'mkvtoolnix', args: ['with-qt']
+brew 'mono'
 brew 'nmap'
 brew 'node'
 brew 'nvm'
 brew 'openssl@1.1'
 brew 'openvpn', restart_service: true
 brew 'php@7.4'
+brew 'python'
 brew 'rbenv'
 brew 'readline'
 brew 'reattach-to-user-namespace'
