--- a/system/macos/brew/Brewfile
+++ b/system/macos/brew/Brewfile
@@ -11,6 +11,7 @@ tap 'homebrew/services'
 brew 'ansible'
 brew 'awscli'
 brew 'bash'
+brew 'bat'
 brew 'circleci'
 brew 'cmake'
 brew 'cmatrix'
@@ -18,6 +19,7 @@ brew 'coreutils', link: true
 brew 'deno'
 brew 'docker'
 brew 'docker-machine'
+brew 'fd'
 brew 'ffmpeg'
 brew 'flac'
 brew 'findutils'
