Add the silver searcher

--- a/system/macos/brew/Brewfile
+++ b/system/macos/brew/Brewfile
@@ -97,6 +97,7 @@ cask 'slack'
 cask 'spectacle'
 cask 'spotify'
 cask 'sublime-text'
+cask 'the_silver_searcher'
 cask 'transmission'
 cask 'transmit'
 cask 'virtualbox'
