--- a/system/macos/brew/Brewfile
+++ b/system/macos/brew/Brewfile
@@ -23,6 +23,7 @@ brew 'fd'
 brew 'ffmpeg'
 brew 'flac'
 brew 'findutils'
+brew 'fswatch'
 brew 'fzf'
 brew 'gawk'
 brew 'gettext', link: true
@@ -75,6 +76,8 @@ brew 'zsh-syntax-highlighting'
 
 # Applications
 cask 'adoptopenjdk8'
+cask 'appcleaner'
+cask 'Amethyst'
 cask 'coconutbattery'
 cask 'firefox'
 cask 'filebot'
@@ -92,7 +95,7 @@ cask 'mediaelch'
 cask 'minikube'
 cask 'nordvpn'
 cask 'paragon-extfs'
-cask 'sequel-pro'
+cask 'sequel-ace'
 cask 'slack'
 cask 'spectacle'
 cask 'spotify'
@@ -100,6 +103,7 @@ cask 'sublime-text'
 cask 'the_silver_searcher'
 cask 'transmission'
 cask 'transmit'
+cask 'typora'
 cask 'virtualbox'
 cask 'vlc'
 cask 'whatsapp'
