--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -24,6 +24,7 @@
   xcl = clean -df
   xres = reset --hard
   xreso = "!git reset --hard origin/\"$(git branch-name)\""
+  oldest-ancestor = !zsh -c 'diff --old-line-format='' --new-line-format='' <(git rev-list --first-parent "${1:-master}") <(git rev-list --first-parent "${2:-HEAD}") | head -1' -
 
 [core]
   autocrlf = input
