Introduce default files to track

--- a/system/macos/sublimetext3/config/.gitignore
+++ b/system/macos/sublimetext3/config/.gitignore
@@ -1,6 +1,7 @@
 # Ignore Everything
-#*
+*
 
 # Except for...
-#!.gitignore
-#!Packages/User/Preferences.sublime-settings
+!.gitignore
+!Packages/User/Preferences.sublime-settings
+!Packages/User/Package\ Control.sublime-settings
