Why did I delete the_silver_searcher in the first place 🤨

--- a/system/macos/brew/Brewfile
+++ b/system/macos/brew/Brewfile
@@ -64,6 +64,7 @@ brew 'ruby'
 brew 'ruby-install'
 brew 'shellcheck'
 brew 'terraform'
+brew 'the_silver_searcher'
 brew 'tmux'
 brew 'tree'
 brew 'vegeta'
