Add swap window shortcuts

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -18,11 +18,20 @@ set -g @continuum-restore 'on'
 #
 # TOOLS
 #
+# ensure split-windows nd new windows retain current path
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+# misc
 set-window-option -g mode-keys vi
+
+#
+# KEY BINDINGS
+#
+# Swap windows
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
 
 #
 # THEME
