--- a/system/macos/brew/Brewfile
+++ b/system/macos/brew/Brewfile
@@ -50,6 +50,7 @@ brew 'macvim'
 brew 'mkvtoolnix', args: ['with-qt']
 brew 'mono'
 brew 'nmap'
+brew 'nnn'
 brew 'node'
 brew 'nvm'
 brew 'openconnect'
