Update brewfile installations

--- a/system/macos/brew/Brewfile
+++ b/system/macos/brew/Brewfile
@@ -12,7 +12,6 @@ brew 'ansible'
 brew 'awscli'
 brew 'bash'
 brew 'bat'
-brew 'circleci'
 brew 'cmake'
 brew 'cmatrix'
 brew 'coreutils', link: true
@@ -46,7 +45,6 @@ brew 'ipython'
 brew 'jq'
 brew 'lazygit'
 brew 'lynx'
-brew 'macvim'
 brew 'mkvtoolnix', args: ['with-qt']
 brew 'mono'
 brew 'nmap'
@@ -84,7 +82,7 @@ cask 'firefox'
 cask 'filebot'
 cask 'flux'
 cask 'google-chrome'
-cask 'google-backup-and-sync'
+cask 'google-drive'
 cask 'handbrake'
 cask 'iterm2'
 cask 'keepassxc'
@@ -93,6 +91,7 @@ cask 'little-snitch'
 cask 'malwarebytes'
 cask 'mediaelch'
 cask 'nordvpn'
+cask 'notion'
 cask 'paragon-extfs'
 cask 'sequel-ace'
 cask 'slack'
@@ -105,7 +104,6 @@ cask 'typora'
 cask 'virtualbox'
 cask 'vlc'
 cask 'whatsapp'
-cask 'wine-stable'
 
 # Fonts
 cask 'font-inconsolata-g-for-powerline'
