General Usage updates

--- a/system/macos/iterm2/com.googlecode.iterm2.plist
+++ b/system/macos/iterm2/com.googlecode.iterm2.plist
@@ -1480,6 +1480,8 @@
 			<string>kNextWindowPointerAction</string>
 		</dict>
 	</dict>
+	<key>Print In Black And White</key>
+	<true/>
 	<key>RestoreWindowContents</key>
 	<true/>
 	<key>ShowBookmarkName</key>
