Added new functions to search through kube config and tmux sessions

--- a/system/macos/iterm2/com.googlecode.iterm2.plist
+++ b/system/macos/iterm2/com.googlecode.iterm2.plist
@@ -331,7 +331,7 @@
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Initial Text</key>
-			<string>tmux ls &amp;&amp; read tmux_session &amp;&amp; tmux attach -t ${tmux_session:-default} || tmux new -s ${tmux_session:-default}</string>
+			<string>tmux_start</string>
 			<key>Initial Use Transparency</key>
 			<false/>
 			<key>Jobs to Ignore</key>
