--- a/dotfiles/.vim/coc-settings.json
+++ b/dotfiles/.vim/coc-settings.json
@@ -5,5 +5,6 @@
   "diagnostic-languageserver.formatFiletypes": {
     "sh": "shfmt"
   },
-  "git.signPriority": 5
+  "git.signPriority": 5,
+  "typescript.autoClosingTags": false
 }
