Suggest auto imports for typescript

--- a/dotfiles/.vim/coc-settings.json
+++ b/dotfiles/.vim/coc-settings.json
@@ -6,5 +6,6 @@
     "sh": "shfmt"
   },
   "git.signPriority": 5,
-  "typescript.autoClosingTags": false
+  "typescript.autoClosingTags": false,
+  "typescript.suggest.autoImports": true
 }
