--- a/macos/iterm2/com.googlecode.iterm2.plist
+++ b/macos/iterm2/com.googlecode.iterm2.plist
@@ -331,7 +331,7 @@
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Initial Text</key>
-			<string>tmux_start</string>
+			<string></string>
 			<key>Initial Use Transparency</key>
 			<false/>
 			<key>Jobs to Ignore</key>
