Support synching directories with use of sync_dir directive

--- a/.config/iterm2/com.googlecode.iterm2.plist
+++ b/.config/iterm2/com.googlecode.iterm2.plist
@@ -646,7 +646,7 @@
 			<key>Mouse Reporting allow mouse wheel</key>
 			<false/>
 			<key>Name</key>
-			<string>Default</string>
+			<string>Main-</string>
 			<key>Non Ascii Font</key>
 			<string>InconsolataForPowerline-g 17</string>
 			<key>Non-ASCII Anti Aliased</key>
