--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,96 +1,10 @@
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -g set-titles on
-
-# auto ressurect
-set -g @continuum-restore 'on'
-
-#setw -g mouse on # Use mouse to scroll
-
 #
-# TOOLS
+# INCLUDE ALL FILEs
 #
-# ensure split-windows nd new windows retain current path
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
+source-file ~/.tmux/plugins.tmux
+source-file ~/.tmux/theme.tmux
+source-file ~/.tmux/settings.tmux
+source-file ~/.tmux/keymaps.tmux
 
-# misc
-set-window-option -g mode-keys vi
-
-#
-# KEY BINDINGS
-#
-# Swap windows
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
-
-#
-# THEME
-#
-# Status update interval
-set -g status-interval 1
-
-# Basic status bar colors
-set -g status-bg black
-set -g status-fg cyan
-
-# Left side of status bar
-set -g status-left-style bg=black,fg=green
-set -g status-left-length 40
-set -g status-left "#S #[fg=white]» #[fg=yellow]#I #[fg=cyan]#P"
-
-# Right side of status bar
-set -g status-right-style bg=black,fg=cyan
-set -g status-right-length 40
-set -g status-right "#H #[fg=white]« #[fg=yellow]%H:%M:%S #[fg=green]%d-%b-%y"
-
-# Window status
-set -g window-status-format " #I:#W#F "
-set -g window-status-current-format " #I:#W#F "
-
-# Current window status
-set -g window-status-current-style bg=red,fg=black
-
-# Window with activity status
-set -g window-status-activity-style bg=yellow,fg=black # fg and bg are flipped here due to a bug in tmux
-
-# Window separator
-set -g window-status-separator ""
-
-# Window status alignment
-set -g status-justify centre
-
-# Pane border
-set -g pane-border-style bg=default,fg=default
-
-# Active pane border
- set -g pane-active-border-style bg=default,fg=green
-
-# Pane number indicator
-set -g display-panes-colour red
-set -g display-panes-active-colour red
-
-# Clock mode
-set -g clock-mode-colour red
-set -g clock-mode-style 24
-
-# Message
-set -g message-style bg=default,fg=default
-
-# Command message
-set -g message-command-style bg=default,fg=default
-
-# Mode
-set -g mode-style bg=red,fg=default
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize TMUX plugin manager
 run '~/.tmux/plugins/tpm/tpm'
