--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,12 +1,12 @@
-# shell:
-  # program: '/usr/local/bin/zsh'
-  # args:
-    # - '-l'
-    # - '-c'
-    # - 'source ~/.zshrc && tmux attach || tmux'
-
 env:
   TERM: 'xterm-256color'
+
+shell:
+  program: '/usr/local/bin/zsh'
+  args:
+    - '-l'
+    - '-c'
+    - 'source ~/.zshrc && tmux_open'
 
 font:
   normal:
@@ -16,4 +16,3 @@ font:
     family: 'InconsolataGo Nerd Font Mono'
     style: 'Bold'
   size: 18
-
