Fix # key binding for en-gb keyboards

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -16,3 +16,6 @@ font:
     family: 'InconsolataGo Nerd Font Mono'
     style: 'Bold'
   size: 18
+
+key_bindings:
+  - { key: 'Key3', mods: 'Alt', chars: "#" }
