--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -7,5 +7,7 @@ jobs:
       - uses: 'actions/checkout@v3'
       - name: 'Run ShellCheck'
         uses: 'ludeeus/action-shellcheck@master'
+        env:
+          SHELLCHECK_OPTS: '-e SC1071'
         with:
           scandir: '.'
