--- a/.gitconfig
+++ b/.gitconfig
@@ -97,3 +97,4 @@
   p   = push
   r   = rebase
   s   = status
+	oldest-ancestor = !zsh -c 'diff --old-line-format= --new-line-format= <(git rev-list --first-parent \"${1:-master}\") <(git rev-list --first-parent \"${2:-HEAD}\") | head -1' -
