--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -18,5 +18,6 @@
   ],
   "typescript.autoClosingTags": false,
   "typescript.suggest.autoImports": true,
-  "snippets.ultisnips.pythonPrompt": false
+  "snippets.ultisnips.pythonPrompt": false,
+  "yaml.enable": false
 }
